--- a/client/app/components/collections/collections.component.html
+++ b/client/app/components/collections/collections.component.html
@@ -1,8 +1,17 @@
 <h3>List of Projects</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let collection of collections" (click)="onSelect(collection)" class="col-1-4">
-    <div class="module collection">
-      <h4>{{collection.name | uppercase}}</h4>
+
+<div [ngSwitch]="status">
+    <div *ngSwitchCase="'loading'">
+        <loading-indicator></loading-indicator>
     </div>
-  </a>
+    <div *ngSwitchCase="'active'">
+       <div class="grid grid-pad">
+        <a *ngFor="let collection of collections" (click)="onSelect(collection)" class="col-1-4">
+         <div class="module collection">
+           <h4>{{collection.name | uppercase}}</h4>
+         </div>
+        </a>
+      </div>
+    </div>
 </div>
+
