--- a/client/app/components/collectionsDetail/collections-detail.component.css
+++ b/client/app/components/collectionsDetail/collections-detail.component.css
@@ -20,6 +20,8 @@ button:hover {
   list-style-type: none;
   padding: 0;
   width: 15em;
+  max-height: 300px;
+  overflow-y: auto; 
 }
 .runs li {
   cursor: pointer;
@@ -28,6 +30,16 @@ button:hover {
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
+  height: 1.6em;
+  border-radius: 4px;
+}
+
+.runs div.info {
+  position: relative;
+  left: 0;
+  background-color: #EEE;
+  margin: 5em;
+  padding: 3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
@@ -57,4 +69,14 @@ button:hover {
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+
+section {
+  float: left;
+  width: 33%;
+}
+aside {
+  float: right;
+  width: 50%;
+
 }
