--- a/client/app/components/collections/collections.component.html
+++ b/client/app/components/collections/collections.component.html
@@ -1,4 +1,4 @@
-<h3>List of Projects</h3>
+<h3 class='well well-sm'>List of Projects</h3>
 
 <div [ngSwitch]="status">
     <div *ngSwitchCase="'loading'">
@@ -14,4 +14,3 @@
       </div>
     </div>
 </div>
-
