--- a/client/app/components/collectionsDetail/collections-detail.component.css
+++ b/client/app/components/collectionsDetail/collections-detail.component.css
@@ -1,66 +1,11 @@
 
-button:hover {
-  background-color: #cfd8dc;
+a:hover {
+ cursor:pointer;
 }
 
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
 .runs {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
   max-height: 300px;
   overflow-y: auto; 
-}
-.runs li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-
-.runs div.info {
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: 5em;
-  padding: 3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-.runs li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .5em;
-}
-.runs li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
-}
-.runs .text {
-  position: relative;
-  top: -3px;
-}
-.runs .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
 }
 
 section {
