added chart func

--- a/client/app/components/runInfoTable/run-info-table.component.html
+++ b/client/app/components/runInfoTable/run-info-table.component.html
@@ -1,41 +1,37 @@
-
- <div [ngSwitch]="status">
-          <div *ngSwitchCase="'loading'">
-               <loading-indicator></loading-indicator>
-          </div>
-          <div *ngSwitchCase="'active'">
-                <div *ngIf="selectedRun && selectedRunInfo" class="info"> 
-       <h2 class='well well-sm'>Run Information</h2>
-       <div class="table-responsive">
-      <table class='table table-bordered '>
-        <thead>
-         <tr>
-             <th>Environment</th>
-            <th>Browser</th>
-             <th>Time</th>
-             <th>Status</th>
-             <th>Percentage</th>
-             <th>Category</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>{{selectedRunInfo.environment | uppercase}}</td>
-        <td> {{selectedRunInfo.browser | uppercase}}</td>
-        <td> {{selectedRunInfo.time | uppercase}}</td>
-        <td [class.danger]="selectedRunInfo.status === 'failed'" [class.success]="selectedRunInfo.status === 'passed'"> {{selectedRunInfo.status | uppercase}}</td>
-        <td> {{selectedRunInfo.percentage | uppercase}}</td>
-        <td> {{selectedRunInfo.category | uppercase}}</td>
-      </tr>
-    </tbody>
-      </table>
-       </div>
-                <button class='btn' (click)="gotoDetail()">View Run Details</button>
-
+<div [ngSwitch]="status">
+  <div *ngSwitchCase="'loading'">
+    <loading-indicator></loading-indicator>
+  </div>
+  <div *ngSwitchCase="'active'">
+    <div *ngIf="selectedRun && selectedRunInfo" class="info">
+      <h2 class='well well-sm'>Run Information</h2>
+      <pie-chart [pieChartLabels]="labels" [pieChartData]="data" [pieChartColors]="colors" ></pie-chart>
+      <div class="table-responsive">
+        <table class='table table-bordered '>
+          <thead>
+            <tr>
+              <th>Environment</th>
+              <th>Browser</th>
+              <th>Time</th>
+              <th>Status</th>
+              <th>Percentage</th>
+              <th>Category</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{selectedRunInfo.environment | uppercase}}</td>
+              <td> {{selectedRunInfo.browser | uppercase}}</td>
+              <td> {{selectedRunInfo.time | uppercase}}</td>
+              <td [class.danger]="selectedRunInfo.status === 'failed'" [class.success]="selectedRunInfo.status === 'passed'"> {{selectedRunInfo.status | uppercase}}</td>
+              <td> {{selectedRunInfo.percentage | uppercase}}</td>
+              <td> {{selectedRunInfo.category | uppercase}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-  
-          </div>
-      </div>
-      
-     
-  
+      <button class='btn' (click)="gotoDetail()">View Run Details</button>
+    </div>
+
+  </div>
+</div>
