--- a/client/app/components/pieChart/piechart.component.html
+++ b/client/app/components/pieChart/piechart.component.html
@@ -1,9 +1,10 @@
-<div id="wrapper" style="position: relative; height: 50vh">
+<div id="wrapper">
   <canvas baseChart
           [data]="pieChartData"
           [labels]="pieChartLabels"
           [colors]="pieChartColors"
+          [options]="pieChartOptions"
           [chartType]="pieChartType"
           (chartHover)="chartHovered($event)"
-          (chartClick)="chartClicked($event)"></canvas>
+          (chartClick)="chartClicked($event)"  width="100" height="200"></canvas>
 </div>
