added feature overview and bug fixes

--- a/client/app/components/collectionsDetail/collections-detail.component.html
+++ b/client/app/components/collectionsDetail/collections-detail.component.html
@@ -26,9 +26,8 @@
     </div>
 
     <div class='col-xs-8'>
-      <run-info-table [selectedRun]="selectedRun" [collection]="collection">
+      <run-info-table [selectedRun]="selectedRun" [collection]="collection" [showDetails]="true">
       </run-info-table>
-
     </div>
 
   </div>
