--- a/client/app/components/featureOverview/featureOverview.component.css
+++ b/client/app/components/featureOverview/featureOverview.component.css
@@ -1,3 +1,24 @@
 th {
   text-align: center;  
 }
+.notsortable {
+  background-color:rgba(0,0,255,0.5);
+}
+.pass {
+  background-color:rgba(0,255,0,0.5);
+}
+.fail {
+  background-color:rgba(255,0,0,10);
+}
+
+.skip {
+  background-color:rgba(0,0,255,0.3);
+}
+
+.pending {
+  background-color:rgba(255,255,0,0.3);
+}
+
+.undefined {
+  background-color:rgba(255,0,0,0.5);
+}
