--- a/client/app/components/runInfoTable/run-info-table.component.css
+++ b/client/app/components/runInfoTable/run-info-table.component.css
@@ -4,3 +4,12 @@
 .show {
     display: block;
 }
+.notsortable {
+  background-color:rgba(0,0,255,0.5);
+}
+.pass {
+  background-color:rgba(0,255,0,0.5);
+}
+.fail {
+  background-color:rgba(255,0,0,10);
+}
